--- a/localens/app/build.gradle
+++ b/localens/app/build.gradle
@@ -23,7 +23,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
-    compile 'com.google.android.gms:play-services:8.1.0'
+    //compile 'com.google.android.gms:play-services:8.1.0'  //TODO: Work around 65K limit ( https://developer.android.com/tools/building/multidex.html )
+    compile 'com.google.android.gms:play-services-location:8.1.0'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
     compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta1'
@@ -31,4 +32,5 @@ dependencies {
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'io.reactivex:rxjava:1.0.14'
+    compile 'com.google.guava:guava:18.0'
 }
